[package]
name = "derive_lit"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A tool to auto-generate literal macros for your data structure"
homepage = "https://www.github.com/calebwin/derive_lit"
documentation = "https://docs.rs/derive_lit"
repository = "https://www.github.com/calebwin/derive_lit"
readme = "README.md"
keywords = ["value", "structure", "macro", "literal", "derive_lit"]
categories = ["data-structures", "development-tools::procedural-macro-helpers", "database", "database-implementations", "template-engine"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.5", features = ["full"] }
heck = "0.3.1"

[lib]
proc_macro = true